--- a/css/modulos.css
+++ b/css/modulos.css
@@ -2653,7 +2653,7 @@ hr,ul:after{clear:both}body{font:13px/1.5 cairoregular,Arial,"Liberation Sans",F
 .melhorplano-selos-flutuantes{
 	position:fixed;
 	right:20px;
-	bottom:160px;
+	bottom:110px;
 	z-index:99998;
 	display:flex;
 	flex-direction:column;
